[package]
name = "concurrent-slotmap"
version = "0.2.0-alpha.1"
authors = ["marc0246 <40955683+marc0246@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.84.0"
description = "A lock-free concurrent slotmap"
documentation = "https://docs.rs/concurrent-slotmap"
readme = "README.md"
repository = "https://github.com/vulkano-rs/concurrent-slotmap"
license = "MIT OR Apache-2.0"
keywords = ["lock-free", "concurrent", "slotmap", "arena", "allocator"]
categories = ["concurrency", "data-structures", "memory-management", "caching"]

[dependencies]
thread_local = "1.0"
virtual-buffer = { git = "https://github.com/vulkano-rs/virtual-buffer", rev = "de5b76416944652e017f106f6aaa7aae1d003936" }

[dev-dependencies]
slotmap = "1.0"

[lints]
rust.rust_2018_idioms = { level = "warn", priority = -1 }
rust.missing_debug_implementations = "warn"
rust.unsafe_op_in_unsafe_fn = "forbid"
rust.unused_unsafe = "allow"
clippy.pedantic = { level = "warn", priority = -1 }
clippy.borrow_as_ptr = "allow"
clippy.cast_ptr_alignment = "allow"
clippy.inline_always = "allow"
clippy.undocumented_unsafe_blocks = "forbid"
